--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
 
         <section id="icons">
             <div id="rock">
-                <button type="submit"><img src="/img/Rock.png" height="150"></button>
+                <button type="submit"><img src="./img/Rock.png" height="150"></button>
                 <h3>Rock</h3>
             </div>
 
             <div id="paper" >
-                <button type="submit"><img src="/img/Paper.png" height="150"></button>
+                <button type="submit"><img src="./img/Paper.png" height="150"></button>
                 <h3>Paper</h3>
             </div>
 
             <div id="scissors">
-                <button  type="submit"><img src="/img/Scissors.png" height="150"></button>
+                <button  type="submit"><img src="./img/Scissors.png" height="150"></button>
                 <h3>Scissors</h3>
             </div>
         </section>
